# icp-nos-checker

./: .gitignore  compose.yaml
be/: .env  Cargo.toml  Dockerfile
be/.cargo/: config.toml
be/src/single/: config.rs  error.rs  git.rs  main.rs
db/: assignments.json  submissions.csv
fe/: .env  Dockerfile  package-lock.json  package.json
fe/src/: App.tsx  main.tsx
