[package]
name = "icp-nos-checker"
version = "0.1.0"
edition = "2021"
default-run = "single"

[dependencies]
axum = "0.7.6"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
git2 = "0.19.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[[bin]]
name = "single"
path = "src/single/main.rs"
