[package]
name = "icp-nos-checker"
version = "0.1.0"
edition = "2021"
default-run = "single"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.6"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
git2 = "0.19.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
walkdir = "2.5.0"

[[bin]]
name = "single"
path = "src/single/main.rs"
